added numpy array section

--- a/numpy.random.ipynb
+++ b/numpy.random.ipynb
@@ -35,7 +35,25 @@
   },
   {
    "source": [
-    "## 1. Randomness \n",
+    "# Table of contents\n",
+    "1. [Randomness](#Randomness)\n",
+    "2. [Numpy](#Numpy)\n",
+    "    1. [Arrays](#Arrays)\n",
+    "3. [Simple Random Data](#randomdata)\n",
+    "    1. [Integers](#Integers)\n",
+    "    2. [Random](#Random)\n",
+    "    3. [Choice](#Choice)\n",
+    "    4. [Bytes](#Bytes)\n",
+    "4. [Permutations](#Permutations)\n",
+    "    1. [Shuffle](#Shuffle)\n",
+    "    2. [Permutation](#Permutation)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## 1. Randomness <a id=\"Randomness\"></a>\n",
     "\n",
     "In mathematics and statistics, random number is a number generated for, or part of some specified distribution presenting statistical randomness.\n",
     "\n",
@@ -46,13 +64,228 @@
   },
   {
    "source": [
-    "## 2. Numpy\n",
+    "## 2. Numpy <a name=\"Numpy\"></a>\n",
     "\n",
-    "Python fundamental package for scientific computing and data analysis that adding support for high-performance, multi-dimensional arrays, along with a wide range of high-level mathematical functions to operate on these arrays such as built-in functions for linear algebra and random number generation. Many Python packages such as Matplotlib, SciPy depend on functionality of Numpy. The numpy.random module complements [3]\n",
+    "Python fundamental package for scientific computing and data analysis that adding support for high-performance, complex multi-dimensional arrays and matrices, along with a wide range of high-level mathematical functions to operate on these arrays such as built-in functions for linear algebra and random number generation. Many Python packages such as Matplotlib, SciPy depend on functionality of Numpy. The numpy.random module enlarges the Python built-in random package about a large number of probability distributions.[^3]\n",
     "\n",
     "### Arrays\n",
     "\n",
     "A Numpy array is flexible grid of values, all of the same type, indexed by a tuple of nonnegative integers for large data sets in Python. The shape of an array is a tuple of integers giving the size of the array along each dimension."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "__Single-dimensional Array__"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 69
+    }
+   ],
+   "source": [
+    "# import numpy package\n",
+    "import numpy as np\n",
+    "# np.array generates an array of numbers\n",
+    "array = np.array([1,2,3,4,5,6])\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 81
+    }
+   ],
+   "source": [
+    "# or arange function can be used to generate a range of numbers for the given parameter\n",
+    "np.arange(1,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  2.5,  5. ,  7.5, 10. ])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "# linspace function returns evenly spaced numbers over a specified interval.\n",
+    "np.linspace(0, 10, num=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(6,)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "# numpy array class contains some features we can perform on array \n",
+    "# shape returns dimensions of the array\n",
+    "array.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
+   "source": [
+    "# size returns total number of elements in the array\n",
+    "array.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "# ndmi returns the number of axes in the array\n",
+    "array.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 73
+    }
+   ],
+   "source": [
+    "# dtype returns the data type of the elements in the array\n",
+    "array.dtype"
+   ]
+  },
+  {
+   "source": [
+    "__Multi-dimensional Array__"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
+   "source": [
+    "# numpy array \n",
+    "np.array([(1,2,3),(4,5,6)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 79
+    }
+   ],
+   "source": [
+    "np.arange(1,7).reshape(2,3)"
+   ]
+  },
+  {
+   "source": [
+    "## 3. Simple random data <div id='randomdata'/>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -64,11 +297,12 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
+    "# Construct a new Generator with the default BitGenerator (PCG64).\n",
     "rng = np.random.default_rng()\n"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 25,
+   "execution_count": 52,
    "outputs": []
   },
   {
@@ -301,7 +535,7 @@
     "\n",
     "[2] Random number generation https://en.wikipedia.org/wiki/Random_number_generation\n",
     "\n",
-    "[3] Numpy https://en.wikipedia.org/wiki/NumPy\n",
+    "[^3]: Numpy https://en.wikipedia.org/wiki/NumPy\n",
     "\n",
     "[1] Random sampling https://numpy.org/doc/1.19/reference/random/index.html\n",
     "\n",
@@ -309,6 +543,13 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
