Added shuffle and permutation functions of numpy.random

--- a/numpy.random.ipynb
+++ b/numpy.random.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.9.0 64-bit ('venv')",
-   "display_name": "Python 3.9.0 64-bit ('venv')",
+   "name": "Python 3.9.0 64-bit ('venv': venv)",
+   "display_name": "Python 3.9.0 64-bit ('venv': venv)",
    "metadata": {
     "interpreter": {
      "hash": "c4bf02fa0d2d8d79f40f4e9377b744e8be0d12e17a9fb69fc695f26879842d79"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +302,8 @@
   {
    "source": [
     "## 3. Simple random data <div id='randomdata'/>\n",
+    "\n",
+    "Simple random sample is a subset of members chosen from a larger set (a population). In which each member of the subset is chosen randomly and has an equal probability of being chosen at any stage during the sampling process. A simple random sample is meant to be an unbiased representation of a group.\n",
     "\n",
     "- **Integers** *returns random integers*\n",
     "- **Random** *return random floats*\n",
@@ -702,6 +704,152 @@
    "source": [
     "# Generates random 10 bytes\n",
     "rng.bytes(10)"
+   ]
+  },
+  {
+   "source": [
+    "## 4. Permutations <div id='permutations'/>\n",
+    "\n",
+    "Permutation refers to the process of rearrangement the linear order or a sequence of an ordered set.\n",
+    "\n",
+    "- **Shuffle** *return modified sequence by shuffling its content *\n",
+    "- **Permutations** *return permuted range or randomly permute a sequence*"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Shuffle"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([3, 1, 9, 5, 7, 2, 6, 4, 8, 0])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "# np.array generates an array of numbers from 0 to 9\n",
+    "x = np.arange(10)\n",
+    "# shuffles randomly elements of an array in place\n",
+    "rng.shuffle(x)\n",
+    "# display \n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[7, 8, 9],\n",
+       "       [4, 5, 6],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "# creates multi-dimensional 3 by 3 an array and shufle it\n",
+    "# worth notice that contents of sub-arrays remain the same\n",
+    "x = np.arange(1,10).reshape(3,3)\n",
+    "rng.shuffle(x)\n",
+    "x "
+   ]
+  },
+  {
+   "source": [
+    "### Permutation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([5, 9, 0, 1, 6, 2, 3, 8, 4, 7])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "# generates an array of randomly permuted range from 0 to 9\n",
+    "rng.permutation(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[7, 8, 9],\n",
+       "       [1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "# creates multi-dimensional 3 by 3 an array \n",
+    "x = np.arange(1,10).reshape((3,3))\n",
+    "# returns permuted copy of an array shuffled along the x axis(rows)\n",
+    "rng.permutation(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[2, 3, 1],\n",
+       "       [5, 6, 4],\n",
+       "       [8, 9, 7]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "# returns permuted copy of an array shuffled along the y axis(columns)\n",
+    "rng.permutation(x, axis=1)"
    ]
   },
   {
