added seed section but still needs some write ups

--- a/numpy.random.ipynb
+++ b/numpy.random.ipynb
@@ -37,19 +37,24 @@
    "source": [
     "# Table of contents\n",
     "1. [Randomness](#Randomness)\n",
-    "    - [Numpy](#Numpy)\n",
-    "    - [Arrays](#Arrays)\n",
-    "3. [Simple Random Data](#randomdata)\n",
-    "    - [Integers](#Integers)\n",
-    "    - [Random](#Random)\n",
-    "    - [Choice](#Choice)\n",
-    "    - [Bytes](#Bytes)\n",
-    "4. [Permutations](#Permutations)\n",
-    "    - [Shuffle](#Shuffle)\n",
-    "    - [Permutation](#Permutation)\n",
-    "5. [Distribution](#randomdata)\n",
-    "    - [Normal](#Normal)\n",
-    "    - [Uniform](#Uniform)"
+    "    1. [Numpy](#Numpy)\n",
+    "    2. [Arrays](#Arrays)\n",
+    "2. [Simple Random Data](#randomdata)\n",
+    "    1. [Integers](#Integers)\n",
+    "    2. [Random](#Random)\n",
+    "    3. [Choice](#Choice)\n",
+    "    4. [Bytes](#Bytes)\n",
+    "3. [Permutations](#Permutations)\n",
+    "    1. [Shuffle](#Shuffle)\n",
+    "    2. [Permutation](#Permutation)\n",
+    "4. [Distribution](#randomdata)\n",
+    "    1. [Normal](#Normal)\n",
+    "    2. [Uniform](#Uniform)\n",
+    "    3. [Pareto](#pareto)\n",
+    "    4. [Chi-Square](#chi-square)\n",
+    "    5. [Geometric](#geometric)\n",
+    "    6. [Binomial](#binomial)\n",
+    "5. [Seed](#seed)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -64,9 +69,9 @@
     "\n",
     "—\n",
     "\n",
-    "1 — [*Random Number*] (https://en.wikipedia.org/wiki/Random_number)\n",
+    "1 — [*Random Number*](https://en.wikipedia.org/wiki/Random_number)\n",
     "\n",
-    "2 — [*Random number generation*] (https://en.wikipedia.org/wiki/Random_number_generation)\n"
+    "2 — [*Random number generation*](https://en.wikipedia.org/wiki/Random_number_generation)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -83,7 +88,7 @@
     "\n",
     "—\n",
     "\n",
-    "3 — [Wikipedia:Numpy] (https://en.wikipedia.org/wiki/NumPy)"
+    "3 — [Wikipedia:Numpy](https://en.wikipedia.org/wiki/NumPy)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -315,7 +320,7 @@
   },
   {
    "source": [
-    "### 3. Simple random data\n",
+    "### 2. Simple random data\n",
     "\n",
     "Simple random sample is a subset of members chosen from a larger set (a population). In which each member of the subset is chosen randomly and has an equal probability of being chosen at any stage during the sampling process. A simple random sample is meant to be an unbiased representation of a group.\n",
     "\n",
@@ -718,7 +723,7 @@
   },
   {
    "source": [
-    "### 4. Permutations\n",
+    "### 3. Permutations\n",
     "\n",
     "Permutation refers to the process of rearrangement the linear order or a sequence of an ordered set.\n",
     "\n",
@@ -864,7 +869,7 @@
   },
   {
    "source": [
-    "### 5. Distributions\n",
+    "### 4. Distributions\n",
     "\n",
     "A probability distribution is a statistical function that describes the likelihood of obtaining all the possible values within given range. Where range sets boundaries of the minimum and maximum possible values. In other words, the values of the variable vary based on the underlying probability distribution.\n",
     "\n",
@@ -882,7 +887,7 @@
     "\n",
     "$$ P(x) = {\\frac{1}{\\sigma\\sqrt{2\\pi}}}e^{{- \\left( {x - \\mu } \\right)^2 }/{2{\\sigma}^2} }$$\n",
     "\n",
-    "#### Empirical Rule\n",
+    "#### *Empirical Rule*\n",
     "\n",
     "It is statistical rule also known as the three-sigma rule or 68-95-99.7 rule which states that that almost all observed data will lie within a band of three standard deviations of the mean in a normal distribution. "
    ],
@@ -1180,6 +1185,72 @@
    "source": [
     "# the probability of toss a tail  \n",
     "(samples == 0).sum() / 1000"
+   ]
+  },
+  {
+   "source": [
+    "### 5. Seed\n",
+    "\n",
+    "#### — Pseudorandom number\n",
+    "\n",
+    "Pseudo-random numbers are computer-generated numbers that are actually predetermined and not completely random as computer relies on instructions and therefore is completely predictable, beacause it is completely determine by the initial values the pseudo-random number algorithm.\n",
+    "\n",
+    "#### — Pseudo-Random Number Generators (PRNGs) \n",
+    "\n",
+    "PRNGs are algorithms that use mathematical formula to generate sequences of pseudo-random numbers. PRNGs are efficient and deterministic, meaning that a given sequence of numbers can be reproduced at any time if the starting point of the sequence is known.\n",
+    "\n",
+    "#### — Bit Generators (PCG64 vs. Mersenne Twister) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[8, 6, 5, 2, 3, 0, 0, 0, 1, 8]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "# numpy.random.default_rng()\n",
+    "# construct a new Generator with the default BitGenerator (PCG64),\n",
+    "# seed: A seed to initialize the BitGenerator, {None, int, array_like[ints]}\n",
+    "s1 = np.random.default_rng(0)\n",
+    "[s1.integers(10) for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[8, 6, 5, 2, 3, 0, 0, 0, 1, 8]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "s2 = np.random.default_rng(0)\n",
+    "[s2.integers(10) for i in range(10)]"
    ]
   },
   {
